--- a/src/card/card.scss
+++ b/src/card/card.scss
@@ -1,9 +1,9 @@
 .container1 {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 1rem;
 
-  .leftContainer {
+  .left-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,9 +28,9 @@
 .container2 {
   gap: 1rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 
-  .rightContainer {
+  .right-container {
     display: flex;
     flex-direction: column;
     align-items: center;
