--- a/src/App.scss
+++ b/src/App.scss
@@ -3,94 +3,8 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-.container1 {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-
-  .leftContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid white;
-    justify-content: center;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-    width: 14rem;
-    height: 6rem;
-
-    img {
-      width: 4rem;
-      padding-top: 0.5rem;
-    }
-
-    h2 {
-      font-size: 14px;
-    }
-  }
-}
-
-.container2 {
-  gap: 1rem;
-  display: flex;
-  flex-direction: row;
-
-  .rightContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid white;
-    justify-content: center;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-    width: 14rem;
-    height: 6rem;
-
-    img {
-      width: 4rem;
-      padding-top: 0.5rem;
-    }
-
-    h2 {
-      font-size: 14px;
-    }
+  p {
+    font-size: 2rem;
+    padding-left: 4rem;
   }
 }
